--- a/client/styles.css
+++ b/client/styles.css
@@ -28,14 +28,22 @@ footer {
 
 .ImageBox {
     width: 200px;
-    border: 3px solid brown;
-    border-radius: 10px;
+
     float:left;
     box-sizing: border-box;
     margin: 5px;
     position: relative;
     overflow: hidden;
     background-color:#222;
+    
+    border-radius: 10px 10px 10px 10px;
+    -moz-border-radius: 10px 10px 10px 10px;
+    -webkit-border-radius: 10px 10px 10px 10px;
+    border: 10px solid #222;
+
+    -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
 }
 
 .ImageBox .deleteBtn {
@@ -63,9 +71,11 @@ footer {
 .likeBtns {
     color: #fff;
 }
+
 .LikeCount{
     padding: 10px;
 }
+
 .LikeBtnUp,
 .LikeBtnDown {
     
